+ refactoring, cleanup